Attempt to make site interactive

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 title: bits&thoughts
 description: Bits represent the technical aspect, and Thoughts capture the philosophical and nostalgic side of my journey
+theme: minima
